# Optimus-Prime

./: .env.example  .gitignore  OPTIMUS_PRIME_ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  tmp_test_results.txt
.claude/: settings.local.json
.planning/debug/: frontend-backend-disconnected.md
backend/: Dockerfile  __init__.py  app.py  auth.py  config.py  main.py  requirements.txt
backend/agent/: __init__.py  conversation.py  conversation_summariser.py  credential_vault.py  engine_router.py  instruction_parser.py  llm_router.py  orchestrator.py  response_composer.py  token_budget_manager.py  tool_selector.py
backend/agents/: __init__.py  cloud_agent.py  datasec_agent.py  endpoint_agent.py  exploit_agent.py  iam_agent.py  intel_agent.py  recon_agent.py  scan_agent.py  scope_discovery_agent.py
backend/api/: chat_routes.py  ws_handler.py
backend/core/: __init__.py  base_agent.py  chat_handler.py  credential_vault.py  event_bus.py  exceptions.py  hook_runner.py  llm_router.py  models.py  namespace_enforcer.py  omo.py  omx.py  permission.py  scope_enforcer.py  session.py  stealth_enforcer.py  task_registry.py  terminal_broadcaster.py  tool_executor.py  tool_fallback.py  xai_logger.py
backend/engines/: __init__.py  engine_ai.py  (+5 more)
config/: scope.yaml.example
docs/: PROGRESS.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ics-runtime/: Dockerfile  runner.py
kali/: Dockerfile  entrypoint.sh  tools.txt
ml-runtime/: Dockerfile  requirements.txt  runner.py
tests/: conftest.py
(+110 files in other folders)
