[project]
name = "optimus-prime"
version = "2.0.0"
description = "Universal AI Security Platform — v2.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
